@@ -1,3 +1,7 @@
+2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* NativeMethods.cs: Update according to HttpOptions changes.
+
 2010-06-02  Alan McGovern  <amcgovern@novell.com>
 
 	* MarkupExpressionParser.cs: Use case insensitive enum parsing
